nginx-ingress.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-app
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: nginx-app
    spec:
      hostNetwork: true
      containers:
        - image: nginx
          name: container-nginx
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 100m
              memory: 200Mi
            limits:
              cpu: 150m
              memory: 200Mi

---
apiVersion: v1
kind: Service 
metadata: 
  name: nginx-svc
spec: 
  selector: 
    app: nginx-app
  type: ClusterIP
  ports: 
  - port: 80
    targetPort: 80
    protocol: TCP 
    name: http

---
apiVersion: extensions/v1beta1
kind: Ingress 
metadata: 
  name: nginx-ing
  annotations:
    kubernetes.io/ingress.class: "nginx"    
spec:
  rules:
  - host: workernode1
    http:
      paths:
      - backend:
          serviceName: nginx-svc
          servicePort: 80
